--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,6 +1,6 @@
-name: Pylint
+name: Lint and Test
 
-on: [push]
+on: [pull_request, push]
 
 jobs:
   build:
@@ -17,7 +17,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
-    - name: Analysing the code with pylint
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Lint with flake8
       run: |
-        pylint `ls -R|grep .py$|xargs`
+        python3 -m flake8 --append-config=setup.cfg
+    - name: Test with pytest
+      run: |
+        python -m pytest
