--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,13 @@ line-length = 80
 verbose = true
 exclude = .git,.env,.github
 single-quotes = true
+ignore = E402
 
 [flake8]
 max-line-length = 80
-exclude = .git,.env,.github,./db/base.py
+exclude = [.git,
+           .env,
+           .github,
+           ./db/base.py,
+           ./core/config.py]
+ignore = E402
